fixing dark mode

--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -3244,85 +3244,3 @@ p.form-message.success, p.form-message.error {
     background-color: #0067f4; }
 
 /*# sourceMappingURL=style.css.map */
-
-@media all and (min-width: 992px) {
-	.navbar .nav-item .dropdown-menu{ display: none; }
-	.navbar .nav-item:hover .nav-link{   }
-	.navbar .nav-item:hover .dropdown-menu{ display: block; }
-	.navbar .nav-item .dropdown-menu{ margin-top:0; }
-}
-
-.cash {
-    color:#0ac775;
-    font-weight: bold;
-}
-
-.sales {
-    color:#0ac775;
-    font-weight: bold;
-}
-
-.debt {
-    color:#f24965;;
-    font-weight: bold;
-}
-
-.completed {
-    text-decoration: line-through;
-}
-
-.date-complete {
-    color:#0ac775;
-    font-style: italic;
-}
-
-.invisible-element {
-    display: none;
-}
-
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin: auto;
-    text-align: center;
-    font-family: arial;
-}
-  
-.price {
-    color: grey;
-    font-size: 22px;
-}
-  
-.card button {
-    border: none;
-    outline: 0;
-    padding: 12px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
-}
-  
-.card button:hover {
-    opacity: 0.7;
-}
-
-.product {
-    margin-bottom: 25px;
-}
-
-.product img {
-    float: left;
-    width:  100px;
-    height: 100px;
-    object-fit: cover;
-}
